Updated projects section

--- a/index.html
+++ b/index.html
@@ -360,13 +360,13 @@
         <div class="row mt-5">
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Azure Benchmarking</h3>
-            <p>Blah Blah Blah Blah Blah</p>
+            <p>For this project I benchmarked various AI models on internal exam questions to see how well each model performed, how their answers changed with various prompts / temperature settings, and how they compared to each other. Some of the modesl I tested were GPT 3.5 Turbo, GPT 4 Omni, and LLama 3. My findings were used in presentations to executive C-suit leadership to define future buisness goals.</p>
           </div>
 
         <div class="row mt-5">
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>HR Copilot</h3>
-            <p>Blah Blah Blah Blah Blah</p>
+            <p>For this project I worked in CoPilot studio and power automate to design a proof of concept design for an HR copilot. This copilot would answer employee questions and would be able to escalate and keep track of common questions. My proof of concept showed the usability of this program and how the company could utilize this tool for other large-scale projects.</p>
           </div>
 
 <!--
