--- a/index.html
+++ b/index.html
@@ -518,7 +518,9 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>2875 University Ave. Goodwin-Kirk. Des Moines, IA 50311</p>
+                <p>Apt 252 <br>
+                  1315 31st st. <br>
+                  Des Moines Iowa, 50311</p>
               </div>
 
               <div class="email">
@@ -532,8 +534,10 @@
                 <h4>Call:</h4>
                 <p>+1 641-780-8595</p>
               </div>
+            </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5967.036761957434!2d-93.65806769999999!3d41.60130079999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87ee9935cad3cafd%3A0xfe60926bb10015c3!2sGoodwin-Kirk%20Residence%20Hall!5e0!3m2!1sen!2sus!4v1713318397527!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d745.8748110335573!2d-93.65979002337966!3d41.601714711175504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87ee993588dd556f%3A0x7264c96121f96a8d!2sDrake%20West%20Village!5e0!3m2!1sen!2sus!4v1724779778899!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
           </div>
