--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Jacob L. Byers</h1>
-      <p>I love <span class="typed" data-typed-items="AI, people, leadership, inovation, learning, management"></span></p>
+      <p>I love <span class="typed" data-typed-items="AI, people, leadership, inovation, learning, management, research"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -215,18 +215,18 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Looks <i class="val">100%</i></span>
+              <span class="skill">Looks <i class="val">98%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="98" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
 <!-- <di class="col-lg-6" data-aos="fade-up" data-aos-delay="100"> -->
 
             <div class="progress">
-              <span class="skill">Dumbassery <i class="val">99%</i></span>
+              <span class="skill">Dumbassery <i class="val">23%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="23" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -349,9 +349,9 @@
         </div>
 
         <div class="row mt-5">
-          <div class="col-lg-4" data-aos="fade-right">
+          <!-- <div class="col-lg-4" data-aos="fade-right">
             <img src="assets/img/portfolio/MetarMapMidwest.jpg" class="img-fluid" alt="">
-          </div>
+          </div> -->
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Metar Map</h3>
             <p>My favorite project that I have worked on is my metar map. The map uses a raspberry pi to search for airport metar data and then updates the LED's to match. As the weather gets more or less dangerous for flying the map will change from green to blue to purple and eventually to red.</p>
@@ -391,9 +391,9 @@
                 <a href="assets/img/portfolio/MetarMapMidwest.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Metar Map of the Midwest"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> 
 -->
-              </div>
+              <!-- </div>
             </div>
-          </div>
+          </div> -->
 <!--
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
