Removed birthday from about section

--- a/index.html
+++ b/index.html
@@ -102,17 +102,12 @@
             <div class="row">
               <div class="col-lg-8">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>26th of September, 2003</span></li>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li> -->
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+641-780-8595</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Pella, Iowa</span></li>
-                </ul>
-              </div>
-              <div class="col-lg-8">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>20</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelors of Science</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email</strong> <span>jaleby03@gmail.com</span></li>
+                  
+                  <li><i class="bi bi-buildings"></i> <strong>City:</strong> <span>Des Moines, Iowa</span></li>
+                  <li><i class="bi bi-mortarboard"></i> <strong>Degree:</strong> <span>Bachelors of Science</span></li>
+                  <li><i class="bi bi-envelope"></i> <strong>Email:</strong> <span>jaleby03@gmail.com</span></li>
+                  <li><i class="bi bi-telephone"></i> <strong>Phone:</strong> <span>641-780-8595</span></li>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li> -->
                 </ul>
               </div>
@@ -391,9 +386,11 @@
                 <a href="assets/img/portfolio/MetarMapMidwest.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Metar Map of the Midwest"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> 
 -->
-              <!-- </div>
+<!--
+              </div>
             </div>
-          </div> -->
+          </div>
+-->
 <!--
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
@@ -415,10 +412,13 @@
             </div>
           </div>
 -->
+<!--
         </div>
-      
       </div>
-    </section><!-- End Portfolio Section -->
+    </section> 
+-->
+    <!-- End Portfolio Section -->
+
 
     <!-- ======= Services Section =======
     <section id="services" class="services">
