Updating About Section

--- a/index.html
+++ b/index.html
@@ -89,12 +89,11 @@
           <p>I am an outgoing tech student with a passion for ensuring the responsible use of artificial intelligence and managing skilled individuals.</p>
           <br>
         </div>
-
         <div class="row">
-          <div class="col-lg-4" data-aos="fade-right">
+          <div class="col-lg-5" data-aos="fade-right">
             <img src="assets/img/heroshot.jpg" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+          <div class="col-lg-7 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Artificial intelligence &amp; Computer Science</h3>
             <p class="fst-italic">
               Bachelor of Science student at Drake University.
@@ -112,9 +111,15 @@
                 </ul>
               </div>
             </div>
-            <p>
-              <!-- Paragraph below email in the About section-->
-            </p>
+            <hr style="width: auto; height: 3px; background-color: #149ddd; opacity: 100; margin: 0; border: none;">
+            <br>
+            <!-- Paragraph below email in the About section-->
+            <div>
+              <h3>Who am I?</h3>
+              <p>
+                Hello,
+              </p>
+            </div>
           </div>
         </div>
 
