--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
               <ul>
                 <li>Worked on POC projects assigned by C-suit executive leadership.</li>
                 <li>Wrote custom Copilots to create efficient workflows and streamline communication.</li>
-                <li>Conducted Azure OpenAI benchmarking tests to idenify and select the premier model for buisness use cases.</li>
+                <li>Conducted Azure OpenAI benchmarking tests to idenify and select the premier model for business use cases.</li>
                 <li>Wrote Terraform (Infastructure as code) to deploy AI POC's to Azure.</li>
                 <li>Used GPT 4 Omni, 3.5 Turbo, and Llama 3 8b generative models.</li>
               </ul>
